--- a/app/src/main/res/layout/activity_post_view.xml
+++ b/app/src/main/res/layout/activity_post_view.xml
@@ -322,7 +322,7 @@
                     android:textSize="15sp" />
 
                 <WebView
-                    android:id="@+id/webview"
+                    android:id="@+id/webviewLocation"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginStart="25dp"
