--- a/app/src/main/res/layout/sub_categories_item_items_list.xml
+++ b/app/src/main/res/layout/sub_categories_item_items_list.xml
@@ -18,9 +18,8 @@
             android:id="@+id/imgLogo"
             android:layout_width="150dp"
             android:layout_height="140dp"
-            android:src="@drawable/cat_item_1"
+            android:src="@drawable/dummy_profile"
             android:scaleType="fitXY"/>
-
 
         <LinearLayout
             android:layout_width="match_parent"
