--- a/app/src/main/res/layout/activity_categories_based_items_list.xml
+++ b/app/src/main/res/layout/activity_categories_based_items_list.xml
@@ -74,7 +74,8 @@
             <com.denzcoskun.imageslider.ImageSlider
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_height="180dp"
+                android:layout_marginTop="10dp"
                 app:iss_auto_cycle="true"
                 app:iss_delay="2000"
                 app:iss_indicator_align="BOTTOM"
