--- a/app/src/main/res/layout/activity_post_view.xml
+++ b/app/src/main/res/layout/activity_post_view.xml
@@ -206,7 +206,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="8dp"
                                         android:fontFamily="@font/teachers_regular"
-                                        android:text="call Now"
+                                        android:text="Call Now"
                                         android:textColor="@color/white"
                                         android:textSize="15sp" />
                                 </LinearLayout>
@@ -367,12 +367,12 @@
                     android:textColor="@color/black"
                     android:textSize="13sp" />
 
-                <WebView
-                    android:id="@+id/webviewLocation"
+                <com.google.android.gms.maps.MapView
+                    android:id="@+id/map_view"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginStart="25dp"
-                    android:layout_marginEnd="25dp" />
+                    android:layout_marginEnd="25dp"/>
 
 
                 <androidx.cardview.widget.CardView
