--- a/app/src/main/res/layout/notifications_items_list.xml
+++ b/app/src/main/res/layout/notifications_items_list.xml
@@ -20,16 +20,31 @@
             android:background="@drawable/round_circle_colorprimary"
             android:layout_marginTop="5dp"/>
 
-        <TextView
-            android:id="@+id/txtTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:textColor="@color/black"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper."
-            android:fontFamily="@font/teachers_regular"
-            android:textSize="13sp"/>
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Lorem ipsum"
+                android:fontFamily="@font/teachers_regular"
+                android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/txtBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/txtdes"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper."
+                android:fontFamily="@font/teachers_regular"
+                android:textSize="13sp"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <View
