--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,34 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/home"
         android:icon="@drawable/home_ic"
-        android:title="Home"
-        app:itemIconTint="@drawable/bottom_nav_item_color_selector"
-        app:itemTextColor="@drawable/bottom_nav_item_color_selector" />
+        android:title="Home" />
 
     <item
         android:id="@+id/categories"
         android:icon="@drawable/categories_ic"
-        android:title="Categories"
-        app:itemIconTint="@drawable/bottom_nav_item_color_selector"
-        app:itemTextColor="@drawable/bottom_nav_item_color_selector" />
+        android:title="Categories" />
 
-    <item
-        android:id="@+id/sale"
-        android:icon="@drawable/sale_ic"
-        android:title="Sale"
-        app:itemIconTint="@drawable/bottom_nav_item_color_selector"
-        app:itemTextColor="@drawable/bottom_nav_item_color_selector" />
+<!--    <item-->
+<!--        android:id="@+id/sale"-->
+<!--        android:icon="@drawable/sale_ic"-->
+<!--        android:title="Sale"/>-->
 
     <item
         android:id="@+id/profile"
         android:icon="@drawable/profile_ic"
-        android:title="Profile"
-        app:itemIconTint="@drawable/bottom_nav_item_color_selector"
-        app:itemTextColor="@drawable/bottom_nav_item_color_selector" />
-
+        android:title="Profile" />
 
 </menu>
