--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -5,101 +5,106 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/drawer_layout">
+        android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- Top bar -->
             <RelativeLayout
                 android:id="@+id/relativeTop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryLight">
+                android:background="@color/colorPrimary">
 
                 <LinearLayout
                     android:id="@+id/li"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="15dp"
                     android:orientation="horizontal">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
                         android:layout_weight="0.5"
+                        android:gravity="center_vertical"
                         android:orientation="horizontal">
+
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/imgMenu"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:src="@drawable/menu_ic"
-                            app:tint="@color/black"/>
+                            app:tint="@color/white"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:textSize="18sp"
-                            android:textColor="@color/black"
                             android:fontFamily="@font/teachers_medium"
-                            android:text="Divyaangadisha"/>
+                            android:text="Divyaangadisha"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"/>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical|end"
                         android:layout_weight="1"
+                        android:gravity="center_vertical|end"
                         android:orientation="horizontal">
+
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/imgNotification"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_marginEnd="15dp"
                             android:src="@drawable/notifications_ic"
-                            app:tint="@color/black"
-                            android:layout_marginEnd="15dp"/>
+                            app:tint="@color/white"/>
+
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/imgWhatsapp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            app:tint="@color/black"
+                            android:layout_marginEnd="15dp"
                             android:src="@drawable/whatsapp_ic"
-                            android:layout_marginEnd="15dp"/>
+                            app:tint="@color/white"/>
                     </LinearLayout>
                 </LinearLayout>
-
             </RelativeLayout>
 
+            <!-- Main Frame -->
             <FrameLayout
                 android:id="@+id/frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/bottom_card"
-                android:layout_below="@+id/relativeTop"/>
+                android:layout_above="@+id/bottomBar"
+                android:layout_below="@+id/relativeTop"
+                android:background="@color/white"/>
 
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/bottom_card"
+            <!-- Bottom Smooth Bar -->
+            <me.ibrahimsn.lib.SmoothBottomBar
+                android:id="@+id/bottomBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="2dp"
-                app:cardElevation="5dp">
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/bottomNavigationView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-                    app:menu="@menu/menu_bottom"
-                    app:itemActiveIndicatorStyle="@drawable/bottom_nav_item_background"
-                    app:itemIconTint="@color/bottom_bg"
-                    app:itemTextColor="@color/bottom_bg"
-                    app:itemBackground="@color/white"
-                    app:labelVisibilityMode="labeled"/>
-            </androidx.cardview.widget.CardView>
+                app:menu="@menu/menu_bottom"
+                app:backgroundColor="@color/colorPrimary"
+                app:indicatorColor="@color/colorIndicator"
+                app:itemIconTint="@color/bottom_bg"
+                app:itemTextColor="@color/bottom_bg"
+                app:iconSize="20dp"
+                app:textSize="12sp" />
+
+
 
         </RelativeLayout>
 
+        <!-- Navigation Drawer -->
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
             android:layout_width="wrap_content"
@@ -108,6 +113,7 @@
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header"
             app:menu="@menu/side_menu"/>
+
     </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
