--- a/app/src/main/res/drawable/jobalert_round_colorprimary2.xml
+++ b/app/src/main/res/drawable/jobalert_round_colorprimary2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#C41E51"/>
+    <solid android:color="#ff4d94"/>
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
