--- a/app/src/main/res/drawable/round_circle_colorprimary.xml
+++ b/app/src/main/res/drawable/round_circle_colorprimary.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/black"/>
+        android:color="@color/gray"/>
 
     <size
         android:width="120dp"
