--- a/app/src/main/res/layout/activity_post_listings.xml
+++ b/app/src/main/res/layout/activity_post_listings.xml
@@ -20,6 +20,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
