--- a/app/src/main/res/layout/all_categories_items_list.xml
+++ b/app/src/main/res/layout/all_categories_items_list.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="5dp"
-    android:orientation="horizontal"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginBottom="8dp"
+    app:cardElevation="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="15dp"
     android:background="@color/white">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,8 +34,9 @@
             android:layout_weight="1"
             android:layout_marginStart="15dp"
             android:text="Vision Centres"
-            android:fontFamily="@font/teachers_semibold"
-            android:textSize="15sp"
+            android:fontFamily="@font/teachers_regular"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:layout_gravity="center_vertical"
             android:singleLine="true"/>
 
@@ -41,9 +46,9 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="10dp"
+            app:tint="@color/gray"
             android:src="@drawable/right_arrow_ic"/>
 
     </LinearLayout>
 
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
