--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -6,27 +6,49 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F2F2F2">
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:fontFamily="@font/teachers_semibold"
-                android:gravity="center"
-                android:text="All Categories"
-                android:textAlignment="center"
-                android:textColor="@color/blue"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/lightGray"
+                    android:layout_marginStart="25dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/txtCTitle"/>
+                <TextView
+                    android:id="@+id/txtCTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:fontFamily="@font/teachers_semibold"
+                    android:text="All Categories"
+                    android:textColor="@color/gray"
+                    android:textSize="17dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/lightGray"
+                    android:layout_marginEnd="25dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/txtCTitle"/>
+            </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"/>
 
 
         </LinearLayout>
