--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPagerBanners"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:paddingTop="5dp"
+                    android:paddingStart="40dp"
+                    android:paddingEnd="40dp"/>
+
                 <com.denzcoskun.imageslider.ImageSlider
+                    android:visibility="gone"
                     android:id="@+id/imageSlider"
                     android:layout_width="wrap_content"
                     android:layout_height="180dp"
@@ -33,24 +42,51 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="@font/teachers_semibold"
-                    android:text="Job Alerts"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"/>
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp">
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/lightGray"
+                        android:layout_marginStart="25dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toStartOf="@+id/txtJobTitle"/>
+                    <TextView
+                        android:id="@+id/txtJobTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="@font/teachers_semibold"
+                        android:text="Job Alerts"
+                        android:textColor="@color/gray"
+                        android:textSize="17dp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/lightGray"
+                        android:layout_marginEnd="25dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/txtJobTitle"/>
+                </RelativeLayout>
+
+
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:visibility="gone"
                     android:id="@+id/recyclerviewjobAlert"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginBottom="20dp" />
 
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
