--- a/app/src/main/res/layout/job_alerts_items_list.xml
+++ b/app/src/main/res/layout/job_alerts_items_list.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="8dp"
     android:orientation="horizontal">
 
     <RelativeLayout
@@ -15,16 +15,16 @@
         android:background="@drawable/round_circle_colorprimary"
         android:layout_marginTop="5dp"/>
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="15dp">
+        app:cardCornerRadius="15dp"
+        app:cardElevation="3dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,8 +37,8 @@
                 android:layout_marginStart="15dp"
                 android:text="IIMC Recruitment 2024: Apply online for 18 non-teaching posts"
                 android:fontFamily="@font/teachers_medium"
-                android:textSize="18sp"/>
-
+                android:textSize="17sp"
+                android:maxLines="2"/>
             <TextView
                 android:id="@+id/txtDec"
                 android:layout_width="match_parent"
@@ -47,9 +47,8 @@
                 android:maxLines="2"
                 android:text="IIMC Recruitment 2024: Apply online for 18 non-teaching posts"
                 android:fontFamily="@font/teachers_regular"
-                android:textSize="16sp"
+                android:textSize="15sp"
                 android:layout_marginTop="5dp"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,8 +60,7 @@
                     android:layout_height="40dp"
                     android:orientation="horizontal"
                     android:background="@drawable/jobalert_round_colorprimary">
-
-                    <ImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center_vertical"
@@ -102,7 +100,5 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
 
 </LinearLayout>
