--- a/app/src/main/res/layout/sub_categories_item_items_list.xml
+++ b/app/src/main/res/layout/sub_categories_item_items_list.xml
@@ -1,200 +1,247 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="3dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgLogo"
-            android:layout_width="150dp"
-            android:layout_height="140dp"
-            android:src="@drawable/dummy_profile"
-            android:scaleType="fitXY"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="150dp"
+                android:layout_height="140dp"
+                android:src="@drawable/dummy_profile"
+                android:scaleType="fitXY"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="5dp"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txtTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="2dp"
+                    android:text="tetle"
+                    android:textSize="15sp"
+                    android:maxLines="2"
+                    android:fontFamily="@font/teachers_medium"/>
+
+                <TextView
+                    android:id="@+id/txtAbout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="2dp"
+                    android:text="Lorem Ipsum dolor sit amit consectetur rises"
+                    android:textSize="12sp"
+                    android:maxLines="1"
+                    android:fontFamily="@font/teachers_regular"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:visibility="gone"
+                        android:id="@+id/imgCertified"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/cat_lable"/>
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:visibility="gone"
+                        android:id="@+id/imgVertified"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/cat_lable2"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginBottom="2dp"
+                        app:cardElevation="2dp"
+                        app:cardCornerRadius="30dp"
+                        app:cardBackgroundColor="@color/colorStart">
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:layout_width="17sp"
+                            android:layout_height="17sp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/gps"
+                            app:tint="@color/white"/>
+                    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/txtLocation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Banjara Hills, Hyderabad"
+                        android:singleLine="true"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/teachers_regular"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginBottom="2dp"
+                        app:cardElevation="2dp"
+                        app:cardCornerRadius="30dp"
+                        app:cardBackgroundColor="@color/colorStart">
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:layout_width="17sp"
+                            android:layout_height="17sp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/phone_round"
+                            app:tint="@color/white"/>
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
+                        android:id="@+id/txtMobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="+91 98765 43210"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/teachers_regular"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginBottom="2dp"
+                        app:cardElevation="2dp"
+                        app:cardCornerRadius="30dp"
+                        app:cardBackgroundColor="@color/colorStart">
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:layout_width="17sp"
+                            android:layout_height="17sp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/email_round"
+                            app:tint="@color/white"/>
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
+                        android:id="@+id/txtEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="*****@gmail.com"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/teachers_regular"/>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:padding="5dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/txtTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:layout_marginStart="2dp"
-                android:text="tetle"
-                android:textSize="15sp"
-                android:maxLines="2"
-                android:fontFamily="@font/teachers_semibold"/>
-
-            <TextView
-                android:id="@+id/txtAbout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="2dp"
-                android:text="Lorem Ipsum dolor sit amit consectetur rises"
-                android:textSize="12sp"
-                android:maxLines="1"
-                android:fontFamily="@font/teachers_regular"/>
-
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <androidx.appcompat.widget.AppCompatImageView
-                   android:visibility="gone"
-                    android:id="@+id/imgCertified"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/cat_lable"/>
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:visibility="gone"
-                    android:id="@+id/imgVertified"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginStart="10dp"
-                    android:src="@drawable/cat_lable2"/>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/marker_ic"/>
-
-                <TextView
-                    android:id="@+id/txtLocation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Banjara Hills, Hyderabad"
-                    android:singleLine="true"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/teachers_regular"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginStart="3dp"
-                    android:src="@drawable/call_ic"/>
-
-                <TextView
-                    android:id="@+id/txtMobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:text="+91 98765 43210"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/teachers_regular"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginStart="3dp"
-                    android:src="@drawable/email_ic"/>
-
-                <TextView
-                    android:id="@+id/txtEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:text="ecvhospital@gmail.com"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/teachers_regular"/>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:id="@+id/linearCall"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/round_full_red">
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="15sp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/call_ic"
-                app:tint="@color/white"/>
-
-            <TextView
+                android:id="@+id/linearCall"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="Call Now"
-                android:layout_gravity="center_vertical"
-                android:textSize="13sp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/teachers_semibold"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearViewMore"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/round_delete_edit_red">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="View More"
-                android:layout_gravity="center"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="10dp"
+                android:orientation="horizontal"
                 android:gravity="center"
-                android:textSize="13sp"
-                android:textColor="@color/colorPrimary"
-                android:fontFamily="@font/teachers_semibold"/>
+                android:background="@drawable/round_full_red">
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="17sp"
+                    android:layout_height="17sp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/call_ic"
+                    app:tint="@color/white"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="Call Now"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="13sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/teachers_medium"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearViewMore"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:background="@drawable/round_delete_edit_red">
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="17sp"
+                    android:layout_height="17sp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/eye_ic"
+                    app:tint="@color/colorPrimary"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="View More"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="13sp"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/teachers_medium"/>
+
+            </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
 
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
