--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -1,132 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
+        <!-- Top bar -->
         <RelativeLayout
+            android:id="@+id/relativeTop"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/white">
 
-            <!-- Top bar -->
-            <RelativeLayout
-                android:id="@+id/relativeTop"
+            <LinearLayout
+                android:id="@+id/li"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white">
+                android:padding="15dp"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/txtName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/teachers_regular"
+                        android:text="Divyaangadisha"
+                        android:textColor="@color/gray"
+                        android:singleLine="true"
+                        android:textSize="17sp" />
+                    <TextView
+                        android:id="@+id/txtWish"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/teachers_medium"
+                        android:text="Good Morning"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
+                </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/li"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|end"
                     android:orientation="horizontal">
-
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.5"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/imgMenu"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/menu_ic"
-                            app:tint="@color/black"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:fontFamily="@font/teachers_medium"
-                            android:text="Divyaangadisha"
-                            android:textColor="@color/black"
-                            android:textSize="18sp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical|end"
-                        android:orientation="horizontal">
-
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="center"
+                        android:background="@drawable/round_circle_white">
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/imgNotification"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginEnd="15dp"
                             android:src="@drawable/notifications_ic"
-                            app:tint="@color/black"/>
+                            app:tint="@color/black" />
+                    </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:gravity="center"
+                        android:background="@drawable/round_circle_white">
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/imgWhatsapp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginEnd="15dp"
                             android:src="@drawable/whatsapp_ic"
-                            app:tint="@color/black"/>
+                            app:tint="@color/black" />
                     </LinearLayout>
+
+
+
                 </LinearLayout>
-            </RelativeLayout>
-
-            <!-- Main Frame -->
-            <FrameLayout
-                android:id="@+id/frame_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/relativeTop"
-                android:layout_marginBottom="70dp"
-                android:background="@color/white"/>
-
-            <!-- Bottom Smooth Bar -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardBottom"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="5dp"
-                app:cardCornerRadius="35dp"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardElevation="8dp">
-                <me.ibrahimsn.lib.SmoothBottomBar
-                    android:id="@+id/bottomBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:menu="@menu/menu_bottom"
-                    app:backgroundColor="@color/colorPrimary"
-                    app:indicatorColor="@color/colorIndicator"
-                    app:itemIconTint="@color/bottom_bg"
-                    app:itemTextColor="@color/bottom_bg"
-                    app:iconSize="20dp"
-                    app:textSize="11sp" />
-            </androidx.cardview.widget.CardView>
-
+            </LinearLayout>
         </RelativeLayout>
 
-        <!-- Navigation Drawer -->
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navView"
-            android:layout_width="wrap_content"
+        <!-- Main Frame -->
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/nav_header"
-            app:menu="@menu/side_menu"/>
+            android:layout_below="@+id/relativeTop"
+            android:layout_marginBottom="70dp"
+            android:background="@color/white" />
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+        <!-- Bottom Smooth Bar -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardBottom"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="20dp"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="35dp"
+            app:cardElevation="8dp">
+
+            <me.ibrahimsn.lib.SmoothBottomBar
+                android:id="@+id/bottomBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:backgroundColor="@color/colorPrimary"
+                app:iconSize="20dp"
+                app:indicatorColor="@color/colorIndicator"
+                app:itemIconTint="@color/bottom_bg"
+                app:itemTextColor="@color/bottom_bg"
+                app:menu="@menu/menu_bottom"
+                app:textSize="11sp" />
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
 
 </layout>
