--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -16,7 +16,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp">
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -28,13 +29,14 @@
                     android:id="@+id/txtCTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="@font/teachers_semibold"
+                    android:fontFamily="@font/teachers_medium"
                     android:text="All Categories"
                     android:textColor="@color/gray"
-                    android:textSize="17dp" />
+                    android:textSize="18sp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
